--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,5 +22,5 @@ add_executable(stage_3_tests tests/stage_3_tests.cpp lexer.cpp parse.cpp ast.cpp
 set_target_properties(stage_3_tests PROPERTIES SUFFIX ".out")
 target_link_libraries(stage_3_tests PRIVATE Catch2::Catch2WithMain)
 
-add_executable(incremental_c incremental_c.cpp lexer.cpp parse.cpp ast.cpp )
-set_target_properties(incremental_c PROPERTIES SUFFIX ".out")
+add_executable(step_c step_c.cpp lexer.cpp parse.cpp ast.cpp )
+set_target_properties(step_c PROPERTIES SUFFIX ".out")
