Added lexing for relevant type specifier keywords and assignment operator, along with tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,10 @@ add_executable(stage_4_tests tests/stage_4_tests.cpp)
 set_target_properties(stage_4_tests PROPERTIES SUFFIX ".out")
 target_link_libraries(stage_4_tests PRIVATE Catch2::Catch2WithMain lex parse codegen)
 
+add_executable(stage_5_tests tests/stage_5_tests.cpp)
+set_target_properties(stage_5_tests PROPERTIES SUFFIX ".out")
+target_link_libraries(stage_5_tests PRIVATE Catch2::Catch2WithMain lex parse codegen)
+
 add_executable(step_c step_c.cpp)
 target_link_libraries(step_c PRIVATE lex parse codegen)
 set_target_properties(step_c PROPERTIES SUFFIX ".out")
