Separated out semantic analysis, added basic symbol table namechecking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,29 +10,31 @@ project(IncrementalC
 )
 
 add_library(lex lex/lexer.cpp)
-add_library(parse parse/parse.cpp parse/ast_sem.cpp parse/type.cpp)
+add_library(parse parse/parse.cpp parse/ast_construct.cpp parse/type.cpp parse/ast_pretty_print.cpp)
+add_library(sem sem/ast_analyze.cpp)
 add_library(codegen codegen/ast_codegen.cpp)
+set(LIBS lex parse sem codegen)
 
 add_executable(stage_1_tests tests/stage_1_tests.cpp)
 set_target_properties(stage_1_tests PROPERTIES SUFFIX ".out")
-target_link_libraries(stage_1_tests PRIVATE Catch2::Catch2WithMain lex parse codegen)
+target_link_libraries(stage_1_tests PRIVATE Catch2::Catch2WithMain ${LIBS})
 
 add_executable(stage_2_tests tests/stage_2_tests.cpp)
 set_target_properties(stage_2_tests PROPERTIES SUFFIX ".out")
-target_link_libraries(stage_2_tests PRIVATE Catch2::Catch2WithMain lex parse codegen)
+target_link_libraries(stage_2_tests PRIVATE Catch2::Catch2WithMain ${LIBS})
 
 add_executable(stage_3_tests tests/stage_3_tests.cpp)
 set_target_properties(stage_3_tests PROPERTIES SUFFIX ".out")
-target_link_libraries(stage_3_tests PRIVATE Catch2::Catch2WithMain lex parse codegen)
+target_link_libraries(stage_3_tests PRIVATE Catch2::Catch2WithMain ${LIBS})
 
 add_executable(stage_4_tests tests/stage_4_tests.cpp)
 set_target_properties(stage_4_tests PROPERTIES SUFFIX ".out")
-target_link_libraries(stage_4_tests PRIVATE Catch2::Catch2WithMain lex parse codegen)
+target_link_libraries(stage_4_tests PRIVATE Catch2::Catch2WithMain ${LIBS})
 
 add_executable(stage_5_tests tests/stage_5_tests.cpp)
 set_target_properties(stage_5_tests PROPERTIES SUFFIX ".out")
-target_link_libraries(stage_5_tests PRIVATE Catch2::Catch2WithMain lex parse codegen)
+target_link_libraries(stage_5_tests PRIVATE Catch2::Catch2WithMain ${LIBS})
 
 add_executable(step_c step_c.cpp)
-target_link_libraries(step_c PRIVATE lex parse codegen)
+target_link_libraries(step_c PRIVATE ${LIBS})
 set_target_properties(step_c PROPERTIES SUFFIX ".out")
