Added for loops

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,9 @@ add_executable(stage_7_tests tests/stage_7_tests.cpp)
 set_target_properties(stage_7_tests PROPERTIES SUFFIX ".out")
 target_link_libraries(stage_7_tests PRIVATE Catch2::Catch2WithMain core)
 
+add_executable(stage_8_tests tests/stage_8_tests.cpp)
+set_target_properties(stage_8_tests PROPERTIES SUFFIX ".out")
+target_link_libraries(stage_8_tests PRIVATE Catch2::Catch2WithMain core)
 add_executable(step_c step_c.cpp)
 target_link_libraries(step_c PRIVATE core)
 set_target_properties(step_c PROPERTIES SUFFIX ".out")
