--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,8 @@ project(IncrementalC
 )
 
 add_library(core lex/lexer.cpp 
-    parse/parse.cpp parse/ast_construct.cpp parse/ast_pretty_print.cpp 
-    type/type_basic.cpp type/type_func.cpp type/type.cpp type/type_derived.cpp
+    parse/parse.cpp parse/parse_decl.cpp parse/ast_construct.cpp parse/ast_pretty_print.cpp 
+    type/type_basic.cpp type/type_func.cpp type/type.cpp 
     sem/ast_analyze.cpp sem/symbol.cpp
     codegen/ast_codegen.cpp codegen/context.cpp codegen/basic_block.cpp)
 
@@ -46,6 +46,10 @@ target_link_libraries(stage_7_tests PRIVATE Catch2::Catch2WithMain core)
 add_executable(stage_8_tests tests/stage_8_tests.cpp)
 set_target_properties(stage_8_tests PROPERTIES SUFFIX ".out")
 target_link_libraries(stage_8_tests PRIVATE Catch2::Catch2WithMain core)
+
+add_executable(stage_9_tests tests/stage_9_tests.cpp)
+set_target_properties(stage_9_tests PROPERTIES SUFFIX ".out")
+target_link_libraries(stage_9_tests PRIVATE Catch2::Catch2WithMain core)
 add_executable(step_c step_c.cpp)
 target_link_libraries(step_c PRIVATE core)
 set_target_properties(step_c PROPERTIES SUFFIX ".out")
