--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,11 +9,14 @@ project(IncrementalC
         CXX
 )
 
+add_library(type
+    type/type_basic.cpp type/type_func.cpp type/type.cpp 
+)
 add_library(core lex/lexer.cpp 
     parse/parse.cpp parse/parse_decl.cpp parse/ast_construct.cpp parse/ast_pretty_print.cpp 
-    type/type_basic.cpp type/type_func.cpp type/type.cpp 
     sem/ast_analyze.cpp sem/symbol.cpp
     codegen/ast_codegen.cpp codegen/context.cpp codegen/basic_block.cpp)
+target_link_libraries(core type)
 
 add_executable(stage_1_tests tests/stage_1_tests.cpp)
 set_target_properties(stage_1_tests PROPERTIES SUFFIX ".out")
@@ -50,6 +53,7 @@ target_link_libraries(stage_8_tests PRIVATE Catch2::Catch2WithMain core)
 add_executable(stage_9_tests tests/stage_9_tests.cpp)
 set_target_properties(stage_9_tests PROPERTIES SUFFIX ".out")
 target_link_libraries(stage_9_tests PRIVATE Catch2::Catch2WithMain core)
+
 add_executable(step_c step_c.cpp)
 target_link_libraries(step_c PRIVATE core)
 set_target_properties(step_c PROPERTIES SUFFIX ".out")
