--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,14 @@ project(IncrementalC
 add_library(type
     type/type_basic.cpp type/type_func.cpp type/type_derived.cpp type/type.cpp 
 )
+add_library (codegen_utils
+    codegen/codegen_utility.cpp codegen/binary_operator_codegen.cpp
+)
 add_library(core lex/lexer.cpp 
     parse/parse.cpp parse/parse_decl.cpp parse/ast_construct.cpp parse/ast_pretty_print.cpp 
     sem/ast_analyze.cpp sem/symbol.cpp
-    codegen/ast_codegen.cpp codegen/context.cpp codegen/basic_block.cpp)
-target_link_libraries(core type)
+    codegen/ast_codegen.cpp codegen/context.cpp codegen/basic_block.cpp )
+target_link_libraries(core type codegen_utils)
 
 add_executable(stage_1_tests tests/stage_1_tests.cpp)
 set_target_properties(stage_1_tests PROPERTIES SUFFIX ".out")
