--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,8 @@ project(IncrementalC
 )
 set(CMAKE_CXX_FLAGS "-Wno-psabi")
 add_library(type
-    type/type_basic.cpp type/type_func.cpp type/type_derived.cpp type/type_pointer.cpp type/type_array.cpp type/type.cpp 
+    type/type_basic.cpp type/type_func.cpp type/type_derived.cpp 
+    type/type_pointer.cpp type/type_array.cpp type/type_struct.cpp type/type.cpp 
 )
 add_library (codegen_utils
     codegen/codegen_utility.cpp codegen/binary_operator_codegen.cpp
