Cleaned up type code, changed CType from a variant to a wrapper around a variant

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ project(IncrementalC
 )
 set(CMAKE_CXX_FLAGS "-Wno-psabi")
 add_library(type
-    type/type_basic.cpp type/type_func.cpp type/type_derived.cpp 
+    type/type_basic.cpp type/type_func.cpp
     type/type_pointer.cpp type/type_array.cpp type/type_struct.cpp type/type_union.cpp
     type/type.cpp 
 )
